syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.codecafe.grpc.intro.model";

message BalanceCheckRequest {
  int32 account_number = 1;
}

message Balance {
  int32 amount = 1;
}

message WithdrawRequest {
  int32 accountNumber = 1;
  int32 amount = 2;
}

message WithdrawResponse {
  int32 amount = 1;
}

message DepositRequest {
  int32 accountNumber = 1;
  int32 amount = 2;
}

message DepositResponse {
  int32 balance = 1;
}